# HoloCore

./: .gitignore  BRANDING.md  CLAUDE.md  FUNCTIONALITY-CHECKLIST.md  GEMINI.md  HOLOCORE-HANDOVER.md  HOLOCORE-START-HERE.md  HOLOCORE.md  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  knowledge-retrieval-workflow.md  pyproject.toml  speckit.constitution.md  speckit.plan.md  speckit.tasks.md  unified-brain-project-handover.md  unified-knowledge-system-proposal.md
.specify/: feature.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
benchmarks/: holocore-vs-graphify-2026-07-16.txt
docs/: architecture.md  capability-status.md  configuration.md  installation.md  mcp-reference.md  portability-ai-clients.md  prerequisites.md  slash-commands.md  troubleshooting.md  user-guide.md  visual-guide.md  workflows.md
specs/001-holocore-baseline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-memory-graph-docs/: spec.md
src/holocore/: __init__.py  animus.py  animus_mining.py  animus_retrieval.py  archive.py  archive_promote.py  archive_promotion.py  archive_source.py  atlas.py  atlas_exports.py  (+25 more)
tests/: conftest.py  native-install-smoke.ps1  test_animus_entities_cleanup.py  test_animus_native.py  test_archive_native.py  test_archive_promote.py  test_atlas_html_commands.py  test_atlas_native.py  test_atlas_parity.py  test_capture.py  test_conversation_import.py  test_engine.py  test_global_graph.py  test_global_graph_cli_surface.py  test_graph_html.py  test_home.py  test_ingest.py  test_install_native.py  test_lifecycle.py  test_limitations_reduced.py  test_memory_pipeline.py  test_memory_refinement.py  test_migration.py  test_native_e2e.py  test_parity_release.py  test_policy.py  test_router.py
tools/: create_demo_gif.py
(+43 files in other folders)
