[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "holocore"
version = "0.2.0"
description = "HoloCore unified local wiki, structural graph, episodic memory, CLI, MCP, and AI-platform engine"
requires-python = ">=3.11"

[project.scripts]
holocore = "holocore.cli:main"
holocore-mcp = "holocore.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
