[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "holocore"
version = "0.3.0"
description = "HoloCore Context Engine: local-first Archive, Atlas, Animus, CLI, MCP, and focused AI context"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_NOTICES.md"]
authors = [{ name = "HoloCore Contributors" }]
keywords = ["ai-context", "claude", "knowledge-graph", "local-first", "mcp", "second-brain"]

[project.scripts]
holocore = "holocore.cli:main"
holocore-mcp = "holocore.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
